--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
     background-size: cover;
     background-color: black;
     z-index: -2;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Orbitron', sans-serif;
 }
 
